--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Притяжение Мужчины Уровня</title>
+<title>Притяжение Мужчины Уровня 💫</title>
   </head>
   <body>
     <div id="root"></div>
